modified exception handling and upading event's action item status method in controller